// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionETA should render correctly for 1 block ETA 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "maxWidth": "100%",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#2B1911",
        },
        [
          {
            "color": "#9F8C82",
          },
          {},
        ],
        false,
      ]
    }
  >
    time
  </Text>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "opacity": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "color": "#2B1911",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 28,
            },
            false,
          ]
        }
      >
        in 1 block
      </Text>
      <test-file-stub
        fill="#037DB5"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`TransactionETA should render correctly for more than 1 block ETA 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "maxWidth": "100%",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#2B1911",
        },
        [
          {
            "color": "#9F8C82",
          },
          {},
        ],
        false,
      ]
    }
  >
    time
  </Text>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "opacity": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "color": "#2B1911",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 28,
            },
            false,
          ]
        }
      >
        in 1008 blocks
      </Text>
      <test-file-stub
        fill="#037DB5"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;
